fix: font on mobile devices

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,5 +1,34 @@
 @tailwind base;
 
+/*****************
+ *        FONTS
+****************/
+@font-face {
+	font-family: 'dana-bold';
+	src: url('../fonts/woff2/dana-bold.woff2') format('woff2'),
+		url('../fonts/woff/dana-bold.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'dana';
+	src: url('../fonts/woff2/dana-regular.woff2') format('woff2'),
+		url('../fonts/woff/dana-regular.woff') format('woff');
+}
+
+html {
+	font-family: 'dana', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
+		'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+	font-size: 14px;
+	word-spacing: 1px;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+	box-sizing: border-box;
+	user-select: none;
+	direction: rtl;
+}
+
 h1 {
 	@apply text-3xl ;
 }
@@ -16,43 +45,6 @@ h5{
 	@apply text-base;
 }
 
-/*****************
- *        FONTS
-****************/
-@font-face {
-	font-family: 'dana';
-	font-weight: 400;
-	font-style: normal;
-	src: local('dana'), local('Dana-Regular'),
-		url('../font/dana/Dana-Regular.ttf') format('ttf');
-	unicode-range: U+0 000-00ff, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-		U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-		U+FEFF, U+FFFD;
-}
-@font-face {
-	font-family: 'dana-bold';
-	font-weight: 500;
-	font-style: bold;
-	src: local('danabold'), local('Dana-Bold'),
-		url('../font/dana/dana-bold.woff2') format('woff2');
-	unicode-range: U+0 000-00ff, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-		U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-		U+FEFF, U+FFFD;
-}
-
-html {
-	font-family: 'dana', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
-		'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-	font-size: 14px;
-	word-spacing: 1px;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-font-smoothing: antialiased;
-	box-sizing: border-box;
-	user-select: none;
-	direction: rtl;
-}
 
 /* ****************
  *        SVG STYLES
